crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__dead_code__bindings__saturated_builtin.snap
---
source: crates/nash-codegen/src/optimizer_tests/dead_code.rs
assertion_line: 34
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), baseline.uplc, pretty(after), candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let unused#4 : int = divideInteger 1 0 in
42
--- unoptimized UPLC
(program 1.1.0
  [(lam unused_4 (con integer 42))
    [[(builtin divideInteger) (con integer 1)] (con integer 0)]])
--- optimized Core
let unused#1 : int = divideInteger 1 0 in
42
--- optimized UPLC
(program 1.1.0
  [(lam unused_2 (con integer 42))
    [[(builtin divideInteger) (con integer 1)] (con integer 0)]])
--- isolated pass
--- core before
let unused#4 : int = divideInteger 1 0 in
42
--- uplc before
(program 1.1.0
  [(lam unused_4 (con integer 42))
    [[(builtin divideInteger) (con integer 1)] (con integer 0)]])
--- core after
let unused#4 : int = divideInteger 1 0 in
42
--- uplc after
(program 1.1.0
  [(lam unused_4 (con integer 42))
    [[(builtin divideInteger) (con integer 1)] (con integer 0)]])
--- result
error: Runtime(DivisionByZero(1, 0))
--- logs
[]
