crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__dead_code__bindings__strict_constructor.snap
---
source: crates/nash-codegen/src/optimizer_tests/dead_code.rs
assertion_line: 34
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), baseline.uplc, pretty(after), candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let unused#2 : @constr[0](int) = constr 0 error in
42
--- unoptimized UPLC
(program 1.1.0 [(lam unused_2 (con integer 42)) (constr 0 (error))])
--- optimized Core
let anf#2 : int = error in
42
--- optimized UPLC
(program 1.1.0 [(lam anf_1 (con integer 42)) (error)])
--- isolated pass
--- core before
let unused#2 : @constr[0](int) = constr 0 error in
42
--- uplc before
(program 1.1.0 [(lam unused_2 (con integer 42)) (constr 0 (error))])
--- core after
let unused#2 : @constr[0](int) = constr 0 error in
42
--- uplc after
(program 1.1.0 [(lam unused_2 (con integer 42)) (constr 0 (error))])
--- result
error: ExplicitErrorTerm
--- logs
[]
